applications/openeuler-cn4-jumpserver-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jumpserver-ingress
  name: jumpserver-ingress
